# clair

./: .gitignore  CLAUDE.md  GALLERY.md  LICENSE  Makefile  README.md  RELEASING.md  SETUP.md  bootstrap.py  install.sh  local.env.example  manifest.json  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
Formula/: clair.rb
clair/: __init__.py  __main__.py  apply.py  card.py  cli.py  completions.py  config.py  diff.py  gallery.py  installer.py  localenv.py  manifest.py  mboard_install.py  mcp.py  mergejson.py  osenv.py  overlay.py  packs.py  plugins.py  profile.py  push.py  scaffold.py  scan.py  score.py  selectables.py  selection.py  share.py  suggest.py  template.py  templates.py  uninstall.py  wizard.py
docs/: README.md
gallery/: ai-researcher.share.json  full-stack.share.json  minimalist.share.json
mboard/: install.py  pyproject.toml
tests/: conftest.py  test_agents_fleet.py  test_apply.py  test_bootstrap.py  test_card.py  test_cli.py  test_completions.py  test_config.py  test_diff.py  test_e2e.py  test_formula.py  test_gallery.py  test_githooks.py  test_install_sh.py  test_installer.py  test_localenv.py  test_manifest.py  test_mboard_install.py  test_mcp.py  test_mergejson.py  test_osenv.py  test_overlay.py  test_packs.py  test_plugins.py  test_profile.py  test_push.py  test_scaffold.py  test_scan.py  test_score.py  test_selectables.py  test_selection.py  test_share.py  test_suggest.py  test_swarm_cli.py  test_swarm_iterm.py  test_swarm_iterm.sh  test_swarm_launch.py  test_swarm_lifecycle.py  test_swarm_prompts.py  test_swarm_workdir.py  (+4 more)
(+109 files in other folders)
