[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "clair"
version = "0.0.0"
description = "Claude Code environment-as-code installer/CLI (stdlib-only)."
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
packages = ["clair"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
